aws/projects/004-phonebook-web-application/JKL/juliet-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  
Parameters:
  MySubnets:
    Description: My Default Subnets
    Type: List<AWS::EC2::Subnet::Id>  

Resources:

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription:  Enable HTTP for ALB
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for App from ALB
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !GetAtt ALBSecurityGroup.GroupId
      
  WebServerLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData: 
        ImageId: ami-0947d2ba12ee1ff75
        InstanceType: t2.micro
        KeyName: aws_linux
        SecurityGroupIds: 
          - !GetAtt WebServerSecurityGroup.GroupId
        TagSpecifications:
          - ResourceType: instance
            Tags:
              - Key: Name
                Value: !Sub Web Server of ${AWS::StackName}
        UserData: 
          Fn::Base64:
            !Sub 
              - |
                #! /bin/bash
                yum update -y
                yum install python3 -y 
                pip3 install flask
                pip3 install flask-mysql
                wget https://raw.githubusercontent.com/kopuskopecik/my-aws-devops-projects/master/aws/projects/004-phonebook-web-application/phonebook-app.py -P /home/ec2-user
                echo "${RDSURL}" >> /home/ec2-user/dbserver.endpoint              
                wget https://raw.githubusercontent.com/kopuskopecik/my-aws-devops-projects/master/aws/projects/004-phonebook-web-application/templates/add-update.html -P /home/ec2-user/templates
                wget https://raw.githubusercontent.com/kopuskopecik/my-aws-devops-projects/master/aws/projects/004-phonebook-web-application/templates/delete.html -P /home/ec2-user/templates
                wget https://raw.githubusercontent.com/kopuskopecik/my-aws-devops-projects/master/aws/projects/004-phonebook-web-application/templates/index.html -P /home/ec2-user/templates
                python3 /home/ec2-user/phonebook-app.py
              - RDSURL: !GetAtt DBInstance.Endpoint.Address

  WebServerTargetGroup:
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    Properties:
      Port: 80
      Protocol: HTTP
      TargetType: instance
      VpcId: !GetAtt WebServerSecurityGroup.VpcId              

  ApplicationLoadBalancer:
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    Properties:
      IpAddressType: ipv4
      Scheme: internet-facing
      SecurityGroups:
        - !GetAtt ALBSecurityGroup.GroupId
      Subnets:
        !Ref MySubnets
      Type: application

  ALBListener:
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    Properties:
      DefaultActions: #required
        - TargetGroupArn: !Ref WebServerTargetGroup
          Type: forward
      LoadBalancerArn: !Ref ApplicationLoadBalancer #required
      Port: 80 #required
      Protocol: HTTP #required

  WebServerASG:
    Type: "AWS::AutoScaling::AutoScalingGroup"
    Properties:
      AvailabilityZones:
        !GetAZs ""
      DesiredCapacity: 2
      HealthCheckGracePeriod: 90
      HealthCheckType: ELB
      LaunchTemplate: 
        LaunchTemplateId: !Ref WebServerLaunchTemplate
        Version: !GetAtt WebServerLaunchTemplate.LatestVersionNumber
      MaxSize: 3 #required
      MinSize: 1 #required
      TargetGroupARNs:
        - !Ref WebServerTargetGroup

  DBInstance:
    Type: "AWS::RDS::DBInstance"
    DeletionPolicy: Delete
    Properties:
      DBName: phonebook
      Engine: MySQL
      EngineVersion: 8.0.19
      MasterUsername: admin
      DBInstanceClass: db.t2.micro
      AllocatedStorage: 20
      MasterUserPassword: clarusway-1
      DBSecurityGroups:
          - !Ref MyDBSecurityGroup

  MyDBSecurityGroup:
    Type: "AWS::RDS::DBSecurityGroup"
    Properties:
      DBSecurityGroupIngress: #required
        - EC2SecurityGroupId: !GetAtt WebServerSecurityGroup.GroupId
      GroupDescription: DatabaseGroup     

Outputs:
  WebsiteURL:
    Description: PhoneBook Converter Application Load Balancer URL with RDS
    Value: !Sub 
      - http://${ALBaddress}
      - ALBaddress: !GetAtt ApplicationLoadBalancer.DNSName
